@@ -257,16 +257,22 @@ LIBRPMIO_0
     Rmdir;
     _Rmdir;
     _rpmaug_debug;
+    _rpmaugI;
     rpmaugDefnode;
     rpmaugDefvar;
+    _rpmaugFlags;
     rpmaugGet;
     rpmaugInsert;
     rpmaugLoad;
+    _rpmaugLoadargv;
+    _rpmaugLoadpath;
     rpmaugMatch;
     rpmaugMv;
     rpmaugNew;
+    rpmaugPoptTable;
     rpmaugPrint;
     rpmaugRm;
+    _rpmaugRoot;
     rpmaugSave;
     rpmaugSet;
     rpmbcImplVecs;
