@@ -19,6 +19,9 @@
 /*@unchecked@*/
 int _rpmaug_debug = 0;
 
+/*@unchecked@*/ /*@relnull@*/
+rpmaug _rpmaugI = NULL;
+
 /*@-mustmod@*/	/* XXX splint on crack */
 static void rpmaugFini(void * _aug)
 	/*@globals fileSystem @*/
@@ -54,17 +57,70 @@ static rpmaug rpmaugGetPool(/*@null@*/ rpmioPool pool)
 
 /*@unchecked@*/
 static const char _root[] = "/";
+const char * _rpmaugRoot = _root;
 /*@unchecked@*/
-static const char _loadpath[] = "";	/* XXX /usr/lib/rpm/lib? */
+static const char _loadpath[] = "";	/* XXX /usr/lib/rpm/lib ? */
+const char * _rpmaugLoadpath = _loadpath;
+unsigned int _rpmaugFlags = 0;		/* AUG_NONE */
+
+#if defined(REFERENCE)
+__attribute__((noreturn))
+static void usage(void)
+{
+    fprintf(stderr, "Usage: %s [OPTIONS] [COMMAND]\n", progname);
+    fprintf(stderr, "Load the Augeas tree and modify it. If no COMMAND is given, run interactively\n");
+    fprintf(stderr, "Run '%s help' to get a list of possible commands.\n",
+            progname);
+    fprintf(stderr, "\nOptions:\n\n");
+    fprintf(stderr, "  -c, --typecheck    typecheck lenses\n");
+    fprintf(stderr, "  -b, --backup       preserve originals of modified files with\n"
+                    "                     extension '.augsave'\n");
+    fprintf(stderr, "  -n, --new          save changes in files with extension '.augnew',\n"
+                    "                     leave original unchanged\n");
+    fprintf(stderr, "  -r, --root ROOT    use ROOT as the root of the filesystem\n");
+    fprintf(stderr, "  -I, --include DIR  search DIR for modules; can be given mutiple times\n");
+    fprintf(stderr, "  --nostdinc         do not search the builtin default directories for modules\n");
+    fprintf(stderr, "  --noload           do not load any files into the tree on startup\n");
+    fprintf(stderr, "  --noautoload       do not autoload modules from the search path\n");
+
+    exit(EXIT_FAILURE);
+}
+#endif
+
+/*@unchecked@*/ /*@null@*/
+const char ** _rpmaugLoadargv;
+
+struct poptOption rpmaugPoptTable[] = {
+#if defined(WITH_AUGEAS)
+    /* XXX POPT_ARGFLAG_TOGGLE? */
+    { "typecheck",'c', POPT_BIT_SET,		&_rpmaugFlags, AUG_TYPE_CHECK,
+	N_("Type check lenses"), NULL },
+    { "backup", 'b',POPT_BIT_SET,		&_rpmaugFlags, AUG_SAVE_BACKUP,
+	N_("Backup modified files with suffix '.augsave'"), NULL },
+    { "new", 'n', POPT_BIT_SET,			&_rpmaugFlags, AUG_SAVE_NEWFILE,
+	N_("Save modified files with suffix '.augnew'"), NULL },
+    { "root", 'r', POPT_ARG_STRING,		&_rpmaugRoot, 0,
+	N_("Use ROOT as the root of the filesystem"), N_("ROOT") },
+    { "include", 'I', POPT_ARG_ARGV,		&_rpmaugLoadargv, 0,
+	N_("Search DIR for modules (may be used more than once)"), N_("DIR") },
+    { "nostdinc", '\0', POPT_BIT_SET,		&_rpmaugFlags, AUG_NO_STDINC,
+	N_("Do not search default modules path"), NULL },
+    { "noload", '\0', POPT_BIT_SET,		&_rpmaugFlags, AUG_NO_LOAD,
+	N_("Do not load files into tree on startup"), NULL },
+    { "noautoload", '\0', POPT_BIT_SET,	 &_rpmaugFlags, AUG_NO_MODL_AUTOLOAD,
+	N_("Do not autoload modules from the search path"), NULL },
+#endif
+    POPT_TABLEEND
+};
 
 rpmaug rpmaugNew(const char * root, const char * loadpath, unsigned int flags)
 {
     rpmaug aug = rpmaugGetPool(_rpmaugPool);
 
     if (root == NULL)
-	root = _root;
+	root = _rpmaugRoot;
     if (loadpath == NULL)
-	loadpath = _loadpath;
+	loadpath = _rpmaugLoadpath;
     aug->root = xstrdup(root);
     aug->loadpath = xstrdup(loadpath);
     aug->flags = flags;
@@ -76,10 +132,22 @@ assert(aug->I != NULL);
     return rpmaugLink(aug);
 }
 
+#ifdef	WITH_AUGEAS
+static rpmaug rpmaugI(void)
+        /*@globals _rpmaugI @*/
+        /*@modifies _rpmaugI @*/
+{
+    if (_rpmaugI == NULL)
+        _rpmaugI = rpmaugNew(_rpmaugRoot, _rpmaugLoadpath, _rpmaugFlags);
+    return _rpmaugI;
+}
+#endif
+
 int rpmaugDefvar(rpmaug aug, const char * name, const char * expr)
 {
     int rc = -1;
 #ifdef	WITH_AUGEAS
+    if (aug == NULL) aug = rpmaugI();
     rc = aug_defvar(aug->I, name, expr);
 #endif
     return rc;
@@ -90,6 +158,7 @@ int rpmaugDefnode(rpmaug aug, const char * name, const char * expr,
 {
     int rc = -1;
 #ifdef	WITH_AUGEAS
+    if (aug == NULL) aug = rpmaugI();
     rc = aug_defnode(aug->I, name, expr, value, created);
 #endif
     return rc;
@@ -99,6 +168,7 @@ int rpmaugGet(rpmaug aug, const char * path, const char ** value)
 {
     int rc = -1;
 #ifdef	WITH_AUGEAS
+    if (aug == NULL) aug = rpmaugI();
     rc = aug_get(aug->I, path, value);
 #endif
     return rc;
@@ -108,6 +178,7 @@ int rpmaugSet(rpmaug aug, const char * path, const char * value)
 {
     int rc = -1;
 #ifdef	WITH_AUGEAS
+    if (aug == NULL) aug = rpmaugI();
     rc = aug_set(aug->I, path, value);
 #endif
     return rc;
@@ -117,6 +188,7 @@ int rpmaugInsert(rpmaug aug, const char * path, const char * label, int before)
 {
     int rc = -1;
 #ifdef	WITH_AUGEAS
+    if (aug == NULL) aug = rpmaugI();
     rc = aug_insert(aug->I, path, label, before);
 #endif
     return rc;
@@ -126,6 +198,7 @@ int rpmaugRm(rpmaug aug, const char * path)
 {
     int rc = -1;
 #ifdef	WITH_AUGEAS
+    if (aug == NULL) aug = rpmaugI();
     rc = aug_rm(aug->I, path);
 #endif
     return rc;
@@ -135,6 +208,7 @@ int rpmaugMv(rpmaug aug, const char * src, const char * dst)
 {
     int rc = -1;
 #ifdef	WITH_AUGEAS
+    if (aug == NULL) aug = rpmaugI();
     rc = aug_mv(aug->I, src, dst);
 #endif
     return rc;
@@ -144,6 +218,7 @@ int rpmaugMatch(rpmaug aug, const char * path, char *** matches)
 {
     int rc = -1;
 #ifdef	WITH_AUGEAS
+    if (aug == NULL) aug = rpmaugI();
     rc = aug_match(aug->I, path, matches);
 #endif
     return rc;
@@ -153,6 +228,7 @@ int rpmaugSave(rpmaug aug)
 {
     int rc = -1;
 #ifdef	WITH_AUGEAS
+    if (aug == NULL) aug = rpmaugI();
     rc = aug_save(aug->I);
 #endif
     return rc;
@@ -162,6 +238,7 @@ int rpmaugLoad(rpmaug aug)
 {
     int rc = -1;
 #ifdef	WITH_AUGEAS
+    if (aug == NULL) aug = rpmaugI();
     rc = aug_load(aug->I);
 #endif
     return rc;
@@ -171,6 +248,7 @@ int rpmaugPrint(rpmaug aug, FILE *out, const char * path)
 {
     int rc = -1;
 #ifdef	WITH_AUGEAS
+    if (aug == NULL) aug = rpmaugI();
     rc = aug_print(aug->I, out, path);
 #endif
     return rc;
